fixed spacing on portfolio cards

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -17,9 +17,7 @@
     1.1
   ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
-.card {
-  width: 100%;
-}
+
 @media screen and (max-width: 430px) {
   .card {
     width: 100%;
