--- a/src/Experience/Experience.css
+++ b/src/Experience/Experience.css
@@ -130,6 +130,7 @@
     height: 900px;
   }
   .experience-sections {
+    max-width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
